--- a/public/index.html
+++ b/public/index.html
@@ -34,14 +34,20 @@
       property="og:title"
       content="Carlos Filho - Desenvolvedor Full Stack"
     />
+    <!-- CORREÇÃO LINKEDIN: og:description explícita -->
     <meta
       property="og:description"
-      content="Portfólio profissional com projetos em React, Node.js e TypeScript"
+      content="Engenheiro de Computação formado pelo ITA com experiência em desenvolvimento full stack e soluções inovadoras. Especialista em React, Node.js e TypeScript."
     />
-    <!-- CORREÇÃO: URL absoluta com timestamp para forçar atualização -->
+    <!-- CORREÇÃO LINKEDIN: og:image sem parâmetros complexos -->
     <meta
       property="og:image"
-      content="https://carlosaugusto.vercel.app/miniatura-social.jpg?v=3&t=1234567890"
+      content="https://carlosaugusto.vercel.app/miniatura-social.jpg"
+    />
+    <!-- CORREÇÃO: Versão alternativa com timestamp para forçar cache -->
+    <meta
+      property="og:image:secure_url"
+      content="https://carlosaugusto.vercel.app/miniatura-social.jpg?v=4"
     />
     <!-- CORREÇÃO: Dimensões corretas para redes sociais -->
     <meta property="og:image:width" content="1200" />
@@ -54,7 +60,7 @@
     <meta property="og:site_name" content="Portfólio Carlos Filho" />
     <meta property="og:locale" content="pt_BR" />
 
-    <!-- CORREÇÃO: Twitter Meta Tags com URL absoluta -->
+    <!-- CORREÇÃO LINKEDIN: Twitter Meta Tags simplificadas -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@carlosfilho" />
     <meta name="twitter:creator" content="@carlosfilho" />
@@ -64,11 +70,11 @@
     />
     <meta
       name="twitter:description"
-      content="Portfólio profissional com projetos em React, Node.js e TypeScript"
+      content="Engenheiro de Computação formado pelo ITA com experiência em desenvolvimento full stack e soluções inovadoras. Especialista em React, Node.js e TypeScript."
     />
     <meta
       name="twitter:image"
-      content="https://carlosaugusto.vercel.app/miniatura-social.jpg?v=3&t=1234567890"
+      content="https://carlosaugusto.vercel.app/miniatura-social.jpg"
     />
     <meta
       name="twitter:image:alt"
