--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <!-- PRIMARY META TAGS - Com Placeholders -->
-    <title>__TITLE__</title>
-    <meta name="title" content="__OG_TITLE__" />
-    <meta name="description" content="__DESCRIPTION__" />
+    <!-- PRIMARY META TAGS -->
+    <title>
+      Carlos Filho - Desenvolvedor Full Stack | React | Node.js | TypeScript
+    </title>
+    <meta name="title" content="Carlos Filho - Desenvolvedor Full Stack" />
+    <meta
+      name="description"
+      content="Engenheiro de Computação formado pelo ITA com experiência em desenvolvimento full stack e soluções inovadoras. Especialista em React, Node.js e TypeScript."
+    />
     <meta
       name="keywords"
       content="desenvolvedor, portfolio, react, node, javascript, typescript, fullstack"
@@ -16,13 +21,25 @@
     <meta name="author" content="Carlos Filho" />
     <meta name="robots" content="index, follow" />
 
-    <!-- OPEN GRAPH META TAGS - Com Placeholders -->
+    <!-- OPEN GRAPH META TAGS -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="__OG_URL__" />
-    <meta property="og:title" content="__OG_TITLE__" />
-    <meta property="og:description" content="__OG_DESCRIPTION__" />
-    <meta property="og:image" content="__OG_IMAGE__" />
-    <meta property="og:image:secure_url" content="__OG_IMAGE__" />
+    <meta property="og:url" content="https://carlosaugusto.vercel.app/" />
+    <meta
+      property="og:title"
+      content="Carlos Filho - Desenvolvedor Full Stack"
+    />
+    <meta
+      property="og:description"
+      content="Engenheiro de Computação formado pelo ITA com experiência em desenvolvimento full stack e soluções inovadoras. Especialista em React, Node.js e TypeScript."
+    />
+    <meta
+      property="og:image"
+      content="https://carlosaugusto.vercel.app/miniatura-social.jpg"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://carlosaugusto.vercel.app/miniatura-social.jpg"
+    />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -33,12 +50,21 @@
     <meta property="og:site_name" content="Portfólio Carlos Filho" />
     <meta property="og:locale" content="pt_BR" />
 
-    <!-- TWITTER META TAGS - Com Placeholders -->
+    <!-- TWITTER META TAGS -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="__OG_URL__" />
-    <meta name="twitter:title" content="__OG_TITLE__" />
-    <meta name="twitter:description" content="__OG_DESCRIPTION__" />
-    <meta name="twitter:image" content="__OG_IMAGE__" />
+    <meta name="twitter:url" content="https://carlosaugusto.vercel.app/" />
+    <meta
+      name="twitter:title"
+      content="Carlos Filho - Desenvolvedor Full Stack"
+    />
+    <meta
+      name="twitter:description"
+      content="Engenheiro de Computação formado pelo ITA com experiência em desenvolvimento full stack e soluções inovadoras. Especialista em React, Node.js e TypeScript."
+    />
+    <meta
+      name="twitter:image"
+      content="https://carlosaugusto.vercel.app/miniatura-social.jpg"
+    />
     <meta
       name="twitter:image:alt"
       content="Preview do portfólio de Carlos Filho - Desenvolvedor Full Stack"
@@ -55,21 +81,22 @@
 
     <!-- FAVICON -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="canonical" href="__OG_URL__" />
+    <link rel="canonical" href="https://carlosaugusto.vercel.app/" />
 
     <!-- THEME COLOR -->
     <meta name="theme-color" content="#3a3ea6" />
 
-    <!-- STRUCTURED DATA -->
+    <!-- STRUCTURED DATA FOR LINKEDIN -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Carlos Filho",
         "jobTitle": "Desenvolvedor Full Stack",
-        "description": "__OG_DESCRIPTION__",
-        "url": "__OG_URL__",
-        "image": "__OG_IMAGE__"
+        "description": "Engenheiro de Computação formado pelo ITA com experiência em desenvolvimento full stack e soluções inovadoras. Especialista em React, Node.js e TypeScript.",
+        "url": "https://carlosaugusto.vercel.app/",
+        "image": "https://carlosaugusto.vercel.app/miniatura-social.jpg",
+        "sameAs": ["https://carlosaugusto.vercel.app/"]
       }
     </script>
 
@@ -77,13 +104,17 @@
     <link rel="preload" href="/src/main.jsx" as="script" />
   </head>
   <body>
-    <!-- NOSCRIPT FALLBACK -->
+    <!-- NOSCRIPT FALLBACK FOR CRAWLERS -->
     <noscript>
       <div style="padding: 20px; font-family: Arial, sans-serif">
-        <h1>__OG_TITLE__</h1>
-        <p>__OG_DESCRIPTION__</p>
+        <h1>Carlos Filho - Desenvolvedor Full Stack</h1>
+        <p>
+          Engenheiro de Computação formado pelo ITA com experiência em
+          desenvolvimento full stack e soluções inovadoras. Especialista em
+          React, Node.js e TypeScript.
+        </p>
         <img
-          src="__OG_IMAGE__"
+          src="https://carlosaugusto.vercel.app/miniatura-social.jpg"
           alt="Preview do portfólio de Carlos Filho"
           style="max-width: 100%; height: auto"
         />
