--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     />
     <meta
       property="og:description"
-      content="Engenheiro de Computação formado pelo ITA com experiência em desenvolvimento full stack e soluções inovadoras. Especialista em React, Node.js e TypeScript."
+      content="Engenheiro de Computação formado pelo ESTACIO- IESAM com experiência em desenvolvimento full stack e soluções inovadoras. Especialista em React, Node.js e TypeScript."
     />
     <meta
       property="og:image"
@@ -93,7 +93,7 @@
         "@type": "Person",
         "name": "Carlos Filho",
         "jobTitle": "Desenvolvedor Full Stack",
-        "description": "Engenheiro de Computação formado pelo ITA com experiência em desenvolvimento full stack e soluções inovadoras. Especialista em React, Node.js e TypeScript.",
+        "description": "Engenheiro de Computação formado pelo ESTACIO - IESAM  em desenvolvimento full stack e soluções inovadoras. Especialista em React, Node.js e TypeScript.",
         "url": "https://carlosaugusto.vercel.app/",
         "image": "https://carlosaugusto.vercel.app/miniatura-social.jpg",
         "sameAs": ["https://carlosaugusto.vercel.app/"]
@@ -141,8 +141,8 @@
       <div style="padding: 20px; font-family: Arial, sans-serif">
         <h1>Carlos Filho - Desenvolvedor Full Stack</h1>
         <p>
-          Engenheiro de Computação formado pelo ITA com experiência em
-          desenvolvimento full stack e soluções inovadoras. Especialista em
+          Engenheiro de Computação formado pelo ESTACIO - IESAM com experiência
+          em desenvolvimento full stack e soluções inovadoras. Especialista em
           React, Node.js e TypeScript.
         </p>
         <img
