:white_check_mark: :bug: :rocket: :alien: :robot: UPGRADE OPRESSOR

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         "@type": "Person",
         "name": "Carlos Filho",
         "jobTitle": "Desenvolvedor Full Stack",
-        "description": "Engenheiro de Computação formado pelo ESTACIO - IESAM  em desenvolvimento full stack e soluções inovadoras. Especialista em React, Node.js e TypeScript.",
+        "description": "Engenheiro de Computação formado pelo ESTACIO - IESAM em desenvolvimento full stack e soluções inovadoras. Especialista em React, Node.js e TypeScript.",
         "url": "https://carlosaugusto.vercel.app/",
         "image": "https://carlosaugusto.vercel.app/miniatura-social.jpg",
         "sameAs": ["https://carlosaugusto.vercel.app/"]
@@ -102,6 +102,20 @@
 
     <!-- PRELOAD -->
     <link rel="preload" href="/src/main.jsx" as="script" />
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-KRH5SVFBEB"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-KRH5SVFBEB");
+    </script>
 
     <!-- BACK TO TOP BUTTON STYLES -->
     <style>
